# hoa-backend-2.0

./: .gitignore  README.md  alembic.ini  check_db.py  curr.txt  debug_out.txt  debug_results.txt  diff.txt  error_trace.txt  error_trace2.txt  error_trace_final.txt  fix_db.py  list_routes.py  output.txt  pyproject.toml  requirements.txt  sync_db.py  test_admin.py  test_check.py  test_login.py  test_reg.py  test_upload_script.py  test_ws.py  upgrade_out.txt
alembic/: env.py
alembic/versions/: 0001_init.py  0002_hoa_modules.py  0003_store_doc_content.py  0004_add_attachments.py  0005_add_payment_intents.py  0006_add_event_date.py  0007_user_contacts.py  0008_add_address_field.py  0009_add_arc_dates.py  0010_move_phone_to_user.py  0011_document_folders.py  0012_add_privacy_settings.py  46c8bb361996_add_index_to_analytics_event_user_id.py  48c0bfa4e90e_manual_add_user_preferences.py  8469b921f350_add_session_id_to_analytics_events.py  a3e45a5bb08d_auto_fix_missing_columns.py  d13fbe236518_add_user_preferences_final.py  d3b8422e1aeb_add_missing_columns_to_tenant_users_and_.py  ea72e57e5404_merge_heads.py
app/: main.py
app/api/: deps.py
app/core/: config.py  errors.py  logging.py  rag.py  rbac.py  security.py  tenant.py
app/db/: models.py  queries.py  session.py
app/scripts/: seed.py
app/services/: auth_service.py  cloudinary_service.py  documents.py  email_service.py  embeddings.py  (+6 more)
scripts/: check_schema.py  check_tables.py  check_users_schema.py  create_super_admin.py  init_analytics_db.py  init_qdrant.py  kill_port.py  seed_db.py  update_db_schema.py
(+17 files in other folders)
