[project]
name = "hoa-saas-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "sqlalchemy==2.0.35",
  "asyncpg==0.29.0",
  "alembic==1.13.2",
  "python-multipart==0.0.9",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "email-validator==2.2.0",
  "bcrypt==4.0.1",
  "psycopg2-binary>=2.9.10",
  "greenlet",
  "fastembed",
  "pypdf",
  "duckduckgo-search",
  "httpx",
  "stripe",
  "openai",
  "PyJWT==2.9.0",
  "argon2-cffi==23.1.0",
  "redis>=4.2.0,<5.0.0",
  "arq==0.26.0",
  "qdrant-client==1.10.1",
]

[tool.uv]
dev-dependencies = [
  "pytest==8.3.2",
  "pytest-asyncio==0.23.8",
  "testcontainers==4.7.2",
  "ruff==0.6.2",
  "mypy==1.11.1",
  "opentelemetry-api==1.26.0",
  "opentelemetry-sdk==1.26.0",
  "opentelemetry-instrumentation-fastapi==0.47b0",
  "opentelemetry-exporter-otlp==1.26.0",
]


[tool.setuptools]
packages = [
  "app",
  "alembic"
]

[tool.setuptools.package-data]
alembic = ["versions/*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
